# QtTriggerNote

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: MainWindow.h  WaveformItem.h
include/core/: Application.h  QtApp.h
include/core/components/: AssetManagerWidget.h  AudioListWidget.h  AudioLoader.h  AudioSetupWidget.h  BindingListWidget.h  BindingSetupWidget.h  DevicesListWidget.h
include/core/pages/: AudioEditorWidget.h
include/core/windows/: ProjectWindow.h
src/: MainWindow.cpp  WaveformItem.cpp  main.cpp
src/core/: AppState.cpp  Application.cpp  QtApp.cpp
src/core/components/: AssetManagerWidget.cpp  AudioListWidget.cpp  AudioLoader.cpp  AudioSetupWidget.cpp  BindingListWidget.cpp  BindingSetupWidget.cpp  DevicesListWidget.cpp
src/core/pages/: AudioEditorWidget.cpp
src/core/windows/: ProjectWindow.cpp
